test/checker/pass/check_await_in_async.ms
const bar := async proc () { 42 };

const foo := async proc () { await bar() };
