test/checker/fail/check_await_outside_async.ms
const bar := async proc () { 42 };

const foo := proc () { await bar() };
